tests/bad/lexical/018-computation-type.clap
type computation <t> = 
  c is {
    Converged t
  + Frozen { Unit } -> c
  }
  
type stream <t> = rec c is { Unit } -> c
 
